[OWL-1082] tip component scss and css module

--- a/src/components/tip/tip.scss
+++ b/src/components/tip/tip.scss
@@ -1,7 +1,7 @@
 .tip2 {
   display: inline-block;
 }
-.tip-context2 {
+.tipContext2 {
   position: absolute;
   left: -99em;
   top: -99em;
@@ -10,7 +10,7 @@
   display: none;
   pointer-events: none;
   background: #000;
-  color: #EEE;
+  color: #eee;
   border-radius: 3px;
   padding: 4px 8px;
   z-index: 1111;
