--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -8,3 +8,55 @@
   content: '';
 }
 
+body {
+  font-family: Roboto;
+}
+
+header {
+  text-align: center;
+  background: #590aaa;
+  padding: 20px 0;
+}
+
+.badges {
+  a {
+    display: inline-block;
+    margin-right: 4px;
+  }
+}
+
+.h1 {
+  font-size: 40px;
+  padding: 0;
+  margin: 0;
+  color: #fff;
+}
+
+.btn {
+  cursor: pointer;
+  text-decoration: none;
+  font-size: .8rem;
+  display: inline-block;
+  padding: 8px 12px;
+  border-radius: .3rem;
+  color: rgba(255, 255, 255, .7);
+  background-color: rgba(255, 255, 255, .08);
+  border: 1px solid rgba(255, 255, 255, .2);
+}
+
+.btn:hover {
+  color: rgba(255, 255, 255, .8);
+  background-color: rgba(255, 255, 255, .2);
+  border-color: rgba(255, 255, 255, .3);
+}
+
+.main {
+  display: flex;
+  padding: 40px 0;
+  aside {
+    width: 200px;
+  }
+  .view {
+    flex: 1;
+  }
+}
