[OWL-1072] doc: add new <Switch> style and change to use `$emit` and `onChange listener`

--- a/src/client/views/switch/switch.scss
+++ b/src/client/views/switch/switch.scss
@@ -1,7 +1,11 @@
-.demo{
+.demo {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
-.demoMsg{
+.demoMsg {
   margin-left: 30px
+}
+.title {
+  margin-bottom: 15px;
 }
