[OWL-597] <Button.Group> doc

--- a/src/client/views/button/button.scss
+++ b/src/client/views/button/button.scss
@@ -4,6 +4,14 @@
     margin: 10px 10px 30px 0;
   }
 }
+.buttonGroupWrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.buttonGroup {
+  margin-right: 20px;
+}
 .buttonBig {
   width: 50%;
 }
