--- a/src/client/components/header/header.scss
+++ b/src/client/components/header/header.scss
@@ -48,3 +48,10 @@ header {
     color: #fff;
   }
 }
+
+.ver {
+  font-family: 'Aref Ruqaa';
+  font-size: 13px;
+  margin-left: 8px;
+  opacity: .7;
+}
