--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -7,10 +7,17 @@
   width: 100%;
   height: 34px;
   font-family: 'Helvetica Neue UltraLight';
-  font-size: 20px;
+  font-size: 14px;
   input-placeholder {
     color: #b8bdbf;
   }
+}
+.mustFill {
+  position: absolute;
+  top: -5px;
+  right: -14px;
+  color: #e6175c;
+  font-size: 16px;
 }
 .normal {
   border: 1px solid #b8bdbf;
