--- a/src/components/dual-list/dual-list.scss
+++ b/src/components/dual-list/dual-list.scss
@@ -30,6 +30,7 @@
     font-size: 14px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
   &:hover {
     background-color: #cab6f2;
