--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -23,8 +23,8 @@
   color: #6c7173;
   &:focus {
     outline: none;
-    border-color: #cab6f2;
-    box-shadow: 0 0 0 2px rgba(#8962d9, .2), 0 1px 2px rgba(0, 0, 0, .05) inset;
+    border-color: var(--OWL-UI-COLOR-PRIMARY-LIGHT);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .05) inset;
   }
 }
 .success {
@@ -47,7 +47,6 @@
 }
 .loadingPie {
   position: absolute;
-  top: 7px;
   right: 15px;
   left: auto;
 }
