--- a/src/components/page/page.scss
+++ b/src/components/page/page.scss
@@ -48,7 +48,7 @@
         bottom: 2px;
         left: 0;
         width: 100%;
-        background: #8962D9;
+        background: var(--OWL-UI-COLOR-PRIMARY);
       }
     }
   }
