--- a/src/components/tab/tab.scss
+++ b/src/components/tab/tab.scss
@@ -2,7 +2,7 @@
   padding: 12px 36px 16px 36px;
   cursor: pointer;
   &[data-selected="1"] {
-    border-bottom : 2px solid #9471db;
+    border-bottom : 2px solid var(--OWL-UI-COLOR-PRIMARY);
     cursor: default;
   }
 }
