Clean up the  extra font file, set default `font-family` style

--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-  font: 14px/1.5 Roboto;
+  font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   color: rgb(57, 57, 57);
   background: #fff;
   overflow-y: scroll;
