--- a/src/components/multi-select/multi-select.scss
+++ b/src/components/multi-select/multi-select.scss
@@ -21,6 +21,7 @@ $labelBorderWidth: 1px;
     .labelg,
     .disabledLabelg {
       display: inline;
+      vertical-align: top;
     }
   }
   .labelGroup {
@@ -39,7 +40,7 @@ $labelBorderWidth: 1px;
   border: none;
   outline: none;
   background-color: transparent;
-  vertical-align: middle;
+  margin-top: (($height - 26px) / 2 + 3px);
 }
 
 .optionBox {
