--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -1,19 +1,39 @@
 .cal {
-  fill: var(--OWL-UI-COLOR-PRIMARY);
+  fill: var(--OWL-UI-COLOR-PRIMARY-LIGHT);
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .picker {
-
+  position: relative;
+  height: 34px;
+  outline: 1px solid #ccc;
+  width: 140px;
+  display: inline-block;
+  &:focus {
+    outline-color: var(--OWL-UI-COLOR-PRIMARY);
+    .calBox {
+      display: block;
+    }
+  }
 }
 
 .colorfulWeekend {
+  [data-day="6"] {
+    color: #00f;
+  }
 
+  [data-day="0"] {
+    color: #f00;
+  }
 }
 
 .calTable {
   border-spacing: 0;
   border-collapse: collapse;
-
+  width: 100%;
   td {
     text-align: center;
   }
@@ -26,10 +46,14 @@
 }
 
 .calBox {
-  display: inline-block;
-  border: 1px solid #ddd;
   padding: 12px;
-
+  position: absolute;
+  top: 35px;
+  left: 0;
+  background: #fff;
+  width: 340px;
+  box-shadow: 0 2px 6px #ccc;
+  display: none;
 }
 
 .calTop {
@@ -71,9 +95,6 @@
 .today {
   color: #fff;
   background: var(--OWL-UI-COLOR-PRIMARY);
-  &:hover {
-    background: none;
-  }
 }
 
 .calPrev, .calNext {
@@ -93,3 +114,9 @@
   margin-left: 16px;
 }
 
+
+.value {
+  padding-left: 32px;
+  height: 34px;
+  line-height: 34px;
+}
