--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -18,15 +18,23 @@
   font-size: 14px;
   @include button-fill(#000, #eee);
   text-decoration: none;
+  outline: none;
   cursor: pointer;
-  &:not(.disabled) {
-    &:hover {
-      outline: none;
-      text-decoration: none;
-      box-shadow: inset 0 0 0 30px rgba(0, 0, 0, .1);
+  &:hover {
+    box-shadow: inset 0 0 0 30px rgba(0, 0, 0, .1);
+  }
+}
+
+.buttonGroup {
+  display: flex;
+  vertical-align: bottom;
+  .button {
+    border-left-width: 0;
+    &[data-selected="1"] {
+      @include button-fill(#fff, var(--OWL-UI-COLOR-PRIMARY));
     }
-    &:focus {
-      outline: none;
+    &:first-of-type {
+      border-left-width: 1px;
     }
   }
 }
@@ -34,6 +42,10 @@
 .disabled {
   cursor: default;
   opacity: .4;
+  outline: none;
+  &:hover {
+    box-shadow: none;
+  }
 }
 
 .outline {
@@ -52,27 +64,12 @@
 }
 
 .primaryOutline {
-  &:focus, &:hover {
-    @include button-fill(#fff, var(--OWL-UI-COLOR-PRIMARY));
-  }
-}
-
-.primaryOutline.disabled, .primaryOutline {
   color: var(--OWL-UI-COLOR-PRIMARY);
   border-color: var(--OWL-UI-COLOR-PRIMARY);
   background-color: transparent;
-}
-
-.buttonGroup {
-  display: flex;
-  vertical-align: bottom;
-  .button {
-    border-left-width: 0;
-    &[data-selected="1"] {
+  &:not(.disabled) {
+    &:focus, &:hover {
       @include button-fill(#fff, var(--OWL-UI-COLOR-PRIMARY));
-    }
-    &:first-of-type {
-      border-left-width: 1px;
     }
   }
 }
