--- a/src/components/time-picker/time-picker.scss
+++ b/src/components/time-picker/time-picker.scss
@@ -43,6 +43,8 @@
     outline-color: var(--OWL-UI-COLOR-PRIMARY);
     .timebox {
       display: block;
+      padding: 0;
+      margin: 0;
     }
   }
 }
