[TimePicker] Set `z-index` to parent - component

--- a/src/components/time-picker/time-picker.scss
+++ b/src/components/time-picker/time-picker.scss
@@ -38,7 +38,7 @@
   width: 90px;
   height: 34px;
   position: relative;
-
+  z-index: 8887;
   &:focus {
     outline-color: var(--OWL-UI-COLOR-PRIMARY);
     .timebox {
