--- a/src/components/multi-select/multi-select.scss
+++ b/src/components/multi-select/multi-select.scss
@@ -38,7 +38,7 @@ $height: 34px;
   display: none;
   width: 100%;
   background-color: #fff;
-  border: 1px solid rgba(0,0,0,.2);
+  border: 1px solid rgba(0, 0, 0, .2);
   border-top-style: none;
   max-height: 280px;
   overflow-y: scroll;
