--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -24,7 +24,7 @@
     position: absolute;
     display: none;
     background-color: #fff;
-    border: 1px solid rgba(0,0,0,.2);
+    border: 1px solid rgba(0, 0, 0, .2);
     left: -1px;
     z-index: 1;
     > div {
