Remove * selector by default and get better performance.

--- a/src/client/views/components/components.scss
+++ b/src/client/views/components/components.scss
@@ -59,6 +59,9 @@ dd {
     display: block;
     position: relative;
     color: #590aaa;
+    &:after {
+      content: '';
+    }
     &:hover, &:global(.router-link-active) {
       &:after {
         @extend .hover;
