--- a/src/components/dual-list/dual-list.scss
+++ b/src/components/dual-list/dual-list.scss
@@ -17,6 +17,7 @@
 .listWrapper {
   padding: 0 10px;
   display: flex;
+  box-sizing: border-box;
   align-items: center;
   height: 40px;
   width: 100%;
