--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -3,11 +3,12 @@
   min-width: 200px;
 }
 .input {
-  padding: 10px;
+  box-sizing: border-box;
   width: 100%;
   height: 34px;
+  padding: 0 10px;
   font-size: 14px;
-  input-placeholder {
+  &::placeholder {
     color: #b8bdbf;
   }
 }
