--- a/src/components/multi-select/multi-select.scss
+++ b/src/components/multi-select/multi-select.scss
@@ -8,11 +8,11 @@ $height: 34px;
 }
 
 .searchField {
+  box-sizing: border-box;
   padding: 5px;
   width: 100%;
   min-height: 46px;
   font-size: 14px;
-  min-height: 46px;
   border: 1px solid #b8bdbf;
   color: #6c7173;
   &:focus, &:active {
@@ -36,6 +36,7 @@ $height: 34px;
 
 .optionBox {
   display: none;
+  box-sizing: border-box;
   width: 100%;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, .2);
@@ -47,6 +48,7 @@ $height: 34px;
   top: auto;
   z-index: 1;
   .option {
+    box-sizing: border-box;
     position: relative;
     padding: 6px $pd;
     color: #a0a0a0;
@@ -110,6 +112,7 @@ $height: 34px;
 
 .loadingOption {
   position: relative;
+  box-sizing: border-box;
   width: 100%;
   height: 33px;
   padding: 6px 12px;
