[TimePicker] reset ul

--- a/src/components/time-picker/time-picker.scss
+++ b/src/components/time-picker/time-picker.scss
@@ -9,6 +9,9 @@
   top: 35px;
   background: #fff;
   z-index: 1;
+  padding: 0;
+  margin: 0;
+  list-style: none;
   li {
     padding: 2px;
     padding-left: 8px;
